# velopera-stm32n6-pqc-test

./: .clangd  .cproject  .gitignore  .gitmodules  .mxproject  .project  CMakeLists.txt  README.md  disco-new.ioc  env.sh  gcc-arm-none-eabi.cmake  mx-generated.cmake  sign_app.sh  starm-clang.cmake
Appli/: CMakeLists.txt  STM32N657XX_LRUN.ld  STM32N657XX_LRUN_RAMxspi1.ld  STM32N657XX_LRUN_RAMxspi2.ld  STM32N657XX_ROMxspi1.ld  STM32N657XX_ROMxspi1_RAMxspi2.ld  STM32N657XX_ROMxspi1xspi2_RAMxspi3.ld  STM32N657XX_ROMxspi2.ld  STM32N657XX_ROMxspi2_RAMxspi1.ld  STM32N657XX_ROMxspi3_RAMxspi1xspi2.ld  mx-generated.cmake
Appli/Core/Inc/: crypto_test.h  main.h  partition_stm32n657xx.h  pqm4_hal.h  stm32n6xx_hal_conf.h  stm32n6xx_it.h
Appli/Core/Src/: crypto_test.c  main.c  pqm4_hal.c  secure_nsc.c  stm32n6xx_hal_msp.c  stm32n6xx_it.c
Appli/libs/: CMakeLists.txt
EWARM/: Project.eww
EWARM/Appli/: disco-new_Appli.ewd  disco-new_Appli.ewp  stm32n657xx_LRUN.icf  stm32n657xx_LRUN_RAMxspi1.icf  stm32n657xx_LRUN_RAMxspi2.icf  stm32n657xx_ROMxspi1.icf  stm32n657xx_ROMxspi1_RAMxspi2.icf  stm32n657xx_ROMxspi1xspi2_RAMxspi3.icf  stm32n657xx_ROMxspi2.icf  stm32n657xx_ROMxspi2_RAMxspi1.icf  stm32n657xx_ROMxspi3_RAMxspi1xspi2.icf
EWARM/FSBL/: disco-new_FSBL.ewd  disco-new_FSBL.ewp  stm32n657xx_axisram2_fsbl.icf
FSBL/: CMakeLists.txt  STM32N657XX_AXISRAM2_fsbl.ld  mx-generated.cmake
FSBL/Core/Inc/: main.h  stm32n6xx_hal_conf.h  stm32n6xx_it.h
FSBL/Core/Src/: main.c  stm32n6xx_hal_msp.c  stm32n6xx_it.c
Secure_nsclib/: secure_nsc.h
config_default/: CMakeCache.txt  Makefile  cmake_install.cmake
config_default/Appli/src/disco-new_Appli-stamp/: disco-new_Appli-source_dirinfo.txt
config_default/Appli/tmp/: disco-new_Appli-cfgcmd.txt  disco-new_Appli-mkdirs.cmake
config_default/FSBL/src/disco-new_FSBL-stamp/: disco-new_FSBL-source_dirinfo.txt
config_default/FSBL/tmp/: disco-new_FSBL-mkdirs.cmake
config_default/libs/: Makefile  cmake_install.cmake
